# DeferredTransparency

./: .gitignore  CMakeLists.txt  readme.md
assets/shaders/: deferredShader.frag  gBufferShader.frag  gBufferShader.vert  screenSpaceShader.frag  screenSpaceShader.vert
src/: consts.hpp  context_manager.cpp  context_manager.hpp  debug.hpp  main.cpp
src/input/: input_manager.cpp  input_manager.hpp
src/rendering/: camera.cpp  camera.hpp  light_manager.cpp  light_manager.hpp  lights.hpp  material.hpp  material_manager.cpp  material_manager.hpp  renderer.cpp  renderer.hpp
src/resources/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/scene/: entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
